@@ -1,6 +1,6 @@
 /* This is dvipdfmx, an eXtended version of dvipdfm by Mark A. Wicks.
 
-    Copyright (C) 2002-2016 by Jin-Hwan Cho and Shunsaku Hirata,
+    Copyright (C) 2002-2017 by Jin-Hwan Cho and Shunsaku Hirata,
     the dvipdfmx project team.
     
     Copyright (C) 1998, 1999 by Mark A. Wicks <mwicks@kettering.edu>
@@ -486,8 +486,12 @@ atopt (const char *a)
 #define K_UNIT__CM  2
 #define K_UNIT__MM  3
 #define K_UNIT__BP  4
-    "pt", "in", "cm", "mm", "bp",
-#define K_UNIT__PX  5
+#define K_UNIT__PC  5
+#define K_UNIT__DD  6
+#define K_UNIT__CC  7
+#define K_UNIT__SP  8
+    "pt", "in", "cm", "mm", "bp", "pc", "dd", "cc", "sp",
+#define K_UNIT__PX  9
     "px",
      NULL
   };
@@ -511,6 +515,10 @@ atopt (const char *a)
     case K_UNIT__CM: u *= 72.0 / 2.54 ; break;
     case K_UNIT__MM: u *= 72.0 / 25.4 ; break;
     case K_UNIT__BP: u *= 1.0 ; break;
+    case K_UNIT__PC: u *= 12.0 * 72.0 / 72.27 ; break;
+    case K_UNIT__DD: u *= 1238.0 / 1157.0 * 72.0 / 72.27 ; break;
+    case K_UNIT__CC: u *= 12.0 * 1238.0 / 1157.0 * 72.0 / 72.27 ; break;
+    case K_UNIT__SP: u *= 72.0 / (72.27 * 65536) ; break;
     case K_UNIT__PX: u *= 1.0 ; break; /* 72dpi */
     default:
       WARN("Unknown unit of measure: %s", q);
