@@ -1,3 +1,8 @@
+2017-04-26  Paul Vojta  <vojta@math.berkeley.edu>
+
+	* dvi.c, dvipdfmx.c, spc_html.c, spc_util.c: Support additional
+	length units.
+
 2017-04-16  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>
 
 	* tt_cmap.c: Fix a bug that generation of GID to CID mapping for
